k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-explorer-service
  namespace: ml-explorer
  labels:
    app: ml-lifecycle-explorer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: ml-lifecycle-explorer
